--- a/i18n/vscode-language-pack-fr/translations/main.i18n.json
+++ b/i18n/vscode-language-pack-fr/translations/main.i18n.json
@@ -2403,7 +2403,7 @@
 			"miOpenProcessExplorerer": "Ouvrir l'Explorateur de &&Processus",
 			"miAbout": "À pr&&opos de",
 			"workbenchConfigurationTitle": "Banc d'essai",
-			"showEditorTabs": "Contrôle si les ouverts éditeurs devraient être affichés dans des onglets ou non.",
+			"showEditorTabs": "Contrôle si les éditeurs ouverts doivent être affichés dans des onglets ou non.",
 			"workbench.editor.labelFormat.default": "Afficher le nom du fichier. Lorsque les onglets sont activés et que deux fichiers portent le même nom dans un groupe, les sections distinctes du chemin de chaque fichier sont ajoutées. Lorsque les onglets sont désactivés, le chemin d’accès relatif au dossier de l'espace de travail est affiché si l’éditeur est actif.",
 			"workbench.editor.labelFormat.short": "Afficher le nom du fichier suivi du nom de dossier.",
 			"workbench.editor.labelFormat.medium": "Afficher le nom du fichier suivi de son chemin d’accès relatif au dossier de l'espace de travail.",
